# autoaim

./: .gitmodules  Dockerfile  note.md
wkspace/src/.cache/clangd/index/: armor.hpp.5E82B329618D6058.idx  armor.hpp.C42302234F88B61B.idx  armor__struct.hpp.E7079BD03E18B9A9.idx  armor__traits.hpp.E6CFD990E22C9B52.idx  armors.hpp.9309A26B346844AD.idx  armors__builder.hpp.6FFED74BFEED7653.idx  armors__struct.hpp.0346184793980013.idx  armors__traits.hpp.425B104BCD1F4A24.idx  debug_armor__struct.hpp.03740F44CD642831.idx  debug_armor__traits.hpp.EFFEE824D6EE766D.idx  debug_armors.hpp.33B4F9A8367C1F0C.idx  debug_armors__builder.hpp.A81E3767440421C4.idx  debug_armors__struct.hpp.9DBFD465E4FC5768.idx  debug_armors__traits.hpp.6DCDA640D50DFEDD.idx  debug_light__struct.hpp.2D5D39E55C1C73BC.idx  debug_light__traits.hpp.7952570548062894.idx  debug_lights.hpp.791B23E489773C45.idx  debug_lights__builder.hpp.CBA60E36365A9C04.idx  debug_lights__struct.hpp.D4339F035C992036.idx  debug_lights__traits.hpp.7DF8D9EA19A4CF85.idx  detect.cpp.0F3EB8020A197FBA.idx  detect.cpp.B4A8D059B3D8B0D0.idx  detect_node.cpp.10098A743D077E45.idx  detect_node.cpp.FB5E86A82D9E89D4.idx  detect_node.hpp.AA625152820E2161.idx  detect_node.hpp.C2BC4A6D92A37606.idx  detector.hpp.1A84DB46F5602633.idx  detector.hpp.54C4684E919CCC92.idx  main.cpp.35ABDBDBD448661F.idx  my_opencv.cpp.0EA97232DF2A4EB8.idx  (+4 more)
wkspace/src/auto_aim_detector/: CMakeLists.txt  package.xml
wkspace/src/auto_aim_detector/include/: pnpsolver.hpp
wkspace/src/auto_aim_detector/src/: detect.cpp  detect_node.cpp  main.cpp  my_opencv.cpp  pnpsolver.cpp
wkspace/src/auto_aim_detector/src/armor_detect/include/: armor.hpp  detect_node.hpp  detector.hpp
wkspace/src/auto_aim_detector/src/armor_detect/src/: detect_node.cpp
wkspace/src/install/: local_setup.sh  setup.sh
wkspace/src/log/: latest_build
wkspace/src/opencv_use/: CMakeLists.txt  package.xml
wkspace/src/opencv_use/src/: my_opencv.cpp
(+8 files in other folders)
